Add source links to some competition results

--- a/cv.tex
+++ b/cv.tex
@@ -89,10 +89,11 @@ Designed and implemented \fmtskill{microservices architecture} (\fmtskill{Gearma
 \newcolumntype{T}{>{\raggedleft\arraybackslash}p{.26\linewidth}}
 \newcolumntype{P}{>{\raggedleft\arraybackslash}p{.0875\linewidth}}
 \begin{tabularx}{\columnwidth}{@{}XTP@{}}
-\fmtcompetition{Irish Collegiate Programming Contest (IrlCPC) 2018}&1st place&Team of 3\\
-\fmtcompetition{ICPC Northwestern Europe Regional Contest (NWERC) 2017}&1st Irish team, 47th overall&Team of 3\\
-\fmtcompetition{Irish Collegiate Programming Contest (IrlCPC) 2017}&3rd place&Team of 3\\
-\fmtcompetition{Google Hash Code 2017}&1st Irish team, 164th globally&Team of 2\\
+\fmtcompetition{Student Battle Dev Season 11}&\nasc{http://mycode.doesnot.run/2018/03/28/student-battle-dev-season-11/}{41st place}&Solo\\
+\fmtcompetition{Irish Collegiate Programming Contest (IrlCPC) 2018}&\nasc{http://mycode.doesnot.run/2018/03/11/irlcpc-2018/}{1st place}&Team of 3\\
+\fmtcompetition{ICPC Northwestern Europe Regional Contest (NWERC) 2017}&\nasc{http://www.computing.dcu.ie/news/dcu-computing-teams-compete-european-stage}{1st Irish team, 47th overall}&Team of 3\\
+\fmtcompetition{Irish Collegiate Programming Contest (IrlCPC) 2017}&\nasc{http://mycode.doesnot.run/2017/04/03/irlcpc-2017/}{3rd place}&Team of 3\\
+\fmtcompetition{Google Hash Code 2017}&\nasc{http://mycode.doesnot.run/2018/01/04/hashcode-2017/}{1st Irish team, 164th globally}&Team of 2\\
 \fmtcompetition{ICPC Northwestern Europe Regional Contest (NWERC) 2016}&2nd Irish team, 78th overall&Team of 2\\
 \fmtcompetition{Irish Collegiate Programming Contest (IrlCPC) 2016}&2nd place&Team of 3\\
 \fmtcompetition{Google Hash Code 2016}&2nd Irish team, 120th globally&Team of 3\\
