--- a/cv.tex
+++ b/cv.tex
@@ -8,7 +8,7 @@
     urlcolor=blue
 }
 
-\usepackage[top=1.55cm, bottom=0.9cm, left=2.3cm, right=2.3cm]{geometry}
+\usepackage[top=1.55cm, bottom=0.9cm, left=2cm, right=2cm]{geometry}
 \usepackage{soul}
 \usepackage{titlesec}
 \titleformat{\section}{\large\scshape\raggedright}{}{0em}{}[\titlerule]
@@ -37,27 +37,35 @@
 % Header section. Name on left, contact details on right
 \begin{tabularx}{\columnwidth}{@{}XX@{}}
 \textsc{\Huge{Noah Ó Donnaile}}&
-{\begin{tabularx}{\linewidth}{@{}@{}>{\raggedleft}X@{}}
-\rawnasc{https://noah.needs.money}\\
+{\begin{tabularx}{\linewidth}{@{}@{}>{\raggedleft}X@{}} \rawnasc{https://noah.needs.money}\\
 \rawnasc{https://github.com/iandioch}\\
 \textit{\nasc{mailto:iandioch11+cv@gmail.com}{iandioch11@gmail.com}}
 \end{tabularx}}
 \end{tabularx}
 \vspace{-2em}
 
+\if false
+\section{Overview}
+I am a capable and amicable full-stack developer with an interest in NLP. My successes in algorithmic programming contests show my enthusiasm and ability in tackling difficult new problems.\\
+\fi
+
 % part 4 = https://web.archive.org/web/20120101153859/http://stefano.italians.nl:80/archives/date/2008/10
 \section{Experience}
+\fmtjobtitle{SWE Intern - Google Assistant Natural Language Generation\hfill Google Switzerland}\\
+\fmtdate{June 2019 -- August 2019}\hfill\fmtaddress{Zürich, Switzerland}\\
+Ongoing. \fmtskill{C++}, \fmtskill{Typescript}.
+\bearna
 \fmtjobtitle{Intern in Tools \& Resources for Irish Language Technology\hfill ADAPT Research Centre}\\
 \fmtdate{June 2018 -- July 2018}\hfill\fmtaddress{Dublin, Ireland}\\
 Cleaned text with \fmtskill{Python}, aligned with \fmtskill{Hunalign}. Extracted Irish multi-word expressions from corpora. \nasc{http://mycode.doesnot.run/2018/08/15/yes-no/}{Created tool to process yes/no questions in Irish} (which lacks words for "yes" \& "no") for a SMT system.
 \bearna
-\fmtjobtitle{Software Engineering Intern - Google Trips\hfill Google Zürich}\\
+\fmtjobtitle{SWE Intern - Google Trips\hfill Google Switzerland}\\
 \fmtdate{June 2017 -- May 2018}\hfill\fmtaddress{Zürich, Switzerland}\\
-Added Spotlight Search integration, ``view search history" feature, and granular notifications to the Google Trips iOS app in \fmtskill{Objective C} (+ \fmtskill{UIKit}, \fmtskill{XCTest}, \fmtskill{OCMock}), with \fmtskill{Mercurial}.
+Added Spotlight Search integration, ``view search history" feature, and granular notifications to the Google Trips iOS app in \fmtskill{Objective C} with \fmtskill{Mercurial}.
 \bearna
-\fmtjobtitle{STEP Intern\hfill Google Zürich}\\
+\fmtjobtitle{STEP Intern - Video Ads Engineering Productivity\hfill Google Switzerland}\\
 \fmtdate{July 2016 -- September 2016}\hfill\fmtaddress{Zürich, Switzerland}\\
-Worked on the Video Ads Eng. Prod. team on a tool to reduce dependency bloat by splitting large disjoint libraries into small ones. Worked in \fmtskill{Java} (+ \fmtskill{Guice}), \fmtskill{Python} (+ \fmtskill{Flask}), \fmtskill{Javascript}, with \fmtskill{Piper}.
+Developed a tool to reduce dependency bloat by splitting large disjoint libraries into small ones. Worked in \fmtskill{Java} (+ \fmtskill{Guice}), \fmtskill{Python} (+ \fmtskill{Flask}), \fmtskill{Javascript}, with \fmtskill{Piper}.
 \bearna
 \fmtjobtitle{Java Developer\hfill Opening.io}\\
 \fmtdate{July 2015 -- August 2015}\hfill\fmtaddress{Dublin, Ireland}\\
@@ -76,48 +84,62 @@ Developed \fmtskill{Java} tools to predict a person's salary from their résumé
 \end{tabularx}
 \fi
 
-\section{Projects}
+\section{Education}
+\fmtjobtitle{BSc. in Computational Problem Solving \& Software Development\hfill Dublin City University}\\
+\fmtdate{September 2015 -- June 2019}\hfill\fmtaddress{Dublin, Ireland}\\
+CPSSD is the only degree in Ireland for undergraduate students with prior CS experience. Read more at \nasc{https://cpssd.net}{the course site I created}. I finished the degree \fmtskill{2\textsuperscript{nd}} in class rankings with an average grade of \fmtskill{89\%}.\\
+\fmtskill{Extracurriculars}: 2015-16 \fmtskill{Secretary} and 2016-17 \fmtskill{Chairperson} of computing \& networking society.
+\bearna
+Earned an \fmtskill{All-Ireland Scholarship} and a \fmtskill{DCU Academic Scholarship} as a result of obtaining 605 points (of 625 maximum; \fmtskill{top 1.2\%} nationally) in the Leaving Certificate in secondary school.
+
+\section{Notable Projects}
+\fmtjobtitle{Rabble\hfill Bachelor's Thesis}. 2018 - 2019, 7 months, team of 4\\
+\fmtblurb{\nasc{https://github.com/cpssd/rabble}{Rabble} is a decentralised blogging platform focused on breaking echo chambers \& maximising author control}\\
+Led development of recommender systems (\fmtskill{Python}, \fmtskill{Jupyter}), and \nasc{http://activitypub.rocks}{Activitypub} interoperability, along with some webserver (\fmtskill{Go}) and database (\fmtskill{SQL}) tasks. Heavily contributed to UI (\fmtskill{Typescript}, \fmtskill{React}).
+\bearna
+\if false
 \fmtjobtitle{Dipla\hfill University Project}. 2016 - 2017, 7 months, team of 4\\
 \fmtblurb{\nasc{https://cpssd.net/project/dipla/}{Dipla} is an RPC and distributed computing framework for Python 3.5+}\\
 Wrote websocket communications, task queue, transmission of logic to workers (\fmtskill{Python}, \fmtskill{asyncio}, \fmtskill{websockets}), directory server (\fmtskill{Python}, \fmtskill{Flask}), status page (\fmtskill{Javascript}, \fmtskill{ReactJS}, \fmtskill{chart.js}, \fmtskill{jinja2}).
 \bearna
+%\fi
 \fmtjobtitle{safer.place\hfill HackYourWayDay 2017 Hackathon}. Team of 2\\
 \fmtblurb{\nasc{http://safer.place}{safer.place} is a website to estimate an Irish address’ safety based on government-provided crime data}\\
 Wrote webserver (\fmtskill{Python}, \fmtskill{Flask}, \fmtskill{jinja2}), frontend (\fmtskill{HTML}, \fmtskill{Tachyons CSS}), did data cleanup (\fmtskill{Python}). Translated into Irish. Shortlisted for the \fmtskill{DCU President’s Prize for Innovation 2017}.
 \bearna
+\fi
 \fmtjobtitle{Feedlark\hfill University Project}. 2016, 3 months, team of 5\\
-\fmtblurb{Web-based RSS aggregator that promotes items matching topics the user previously liked}\\
+\fmtblurb{\nasc{https://cpssd.net/project/feedlark/}{Feedlark} is a web-based RSS aggregator that promotes items matching topics the user previously liked}\\
 Designed and built microservices architecture (\fmtskill{Gearman}), topic modelling (\fmtskill{Python}, \fmtskill{spaCy}), ML recommender system
 (\fmtskill{Python}, \fmtskill{Scikit-Learn}), and database service (\fmtskill{Go}, \fmtskill{MongoDB}).
 \section{Competitive Programming}
-I am one of the \nasc{https://open.kattis.com/users/iandioch}{top 100 users on Kattis Online Judge}, and am in the 20 highest ranked Irish users (\fmtskill{top 0.66\%} of all users) on Project Euler. I have had the following results in programming competitions:
+\if false
+I am one of the \nasc{https://open.kattis.com/users/iandioch}{top 150 users on Kattis Online Judge}, and am in the 20 highest ranked Irish users (\fmtskill{top 0.66\%} of all users) on Project Euler.
+\fi
+I \nasc{https://www.computing.dcu.ie/news/irelands-best-young-computer-programmers-win-trip-compete-olympics-programming}{represented Ireland} at the \fmtskill{2015 International Olympiad in Informatics} in Almaty, Kazakhstan. I have also had the following results in other competitions:
 \bearna
 \newcolumntype{T}{>{\raggedleft\arraybackslash}p{.25\linewidth}}
 \newcolumntype{P}{>{\raggedleft\arraybackslash}p{.0875\linewidth}}
 \small{}
 \begin{tabularx}{\columnwidth}{@{}X|X@{}}
-\fmtcompetition{Student Battle Dev Season 11}\hfill\nasc{http://mycode.doesnot.run/2018/03/28/student-battle-dev-season-11/}{41\textsuperscript{st} place}& 
-\fmtcompetition{IrlCPC 2018}\hfill\nasc{http://mycode.doesnot.run/2018/03/11/irlcpc-2018/}{1\textsuperscript{st} place}\\
+\fmtcompetition{Student Battle Dev Season 13}\hfill 89\textsuperscript{th} place&
+\fmtcompetition{ACM IrlCPC 2018}\hfill 1\textsuperscript{st} place\\
+\fmtcompetition{HashCode 2019 Qual.}\hfill 211\textsuperscript{th} place, 1\textsuperscript{st} Irish team&
+\fmtcompetition{ICPC NWERC 2018}\hfill 55\textsuperscript{th} place, 1\textsuperscript{st} Irish team\\
+\fmtcompetition{Student Battle Dev Season 12}\hfill 57\textsuperscript{th} place&
+\fmtcompetition{ICPC UKIEPC 2018}\hfill 13\textsuperscript{th} place, 1\textsuperscript{st} Irish team\\
+\fmtcompetition{Student Battle Dev Season 11}\hfill\nasc{http://mycode.doesnot.run/2018/03/28/student-battle-dev-season-11/}{41\textsuperscript{st} place}&
+\fmtcompetition{ACM IrlCPC 2018}\hfill\nasc{http://mycode.doesnot.run/2018/03/11/irlcpc-2018/}{1\textsuperscript{st} place}\\
 \fmtcompetition{ICPC NWERC 2017}\hfill\nasc{http://www.computing.dcu.ie/news/dcu-computing-teams-compete-european-stage}{47\textsuperscript{th} place. 1\textsuperscript{st} Irish team}&
-\fmtcompetition{UKIEPC 2017}\hfill\nasc{https://www.computing.dcu.ie/news/dcu-clinch-top-3-spots-irish-end-ukiepc-2017}{3\textsuperscript{rd} Irish team}\\
-\fmtcompetition{IrlCPC 2017}\hfill\nasc{http://mycode.doesnot.run/2017/04/03/irlcpc-2017/}{3\textsuperscript{rd} place}&
-\fmtcompetition{Google Hash Code 2017}\hfill\nasc{http://mycode.doesnot.run/2018/01/04/hashcode-2017/}{164\textsuperscript{th} place. 1\textsuperscript{st} Irish team}\\%&Team of 2\\
+\fmtcompetition{ICPC UKIEPC 2017}\hfill\nasc{https://www.computing.dcu.ie/news/dcu-clinch-top-3-spots-irish-end-ukiepc-2017}{3\textsuperscript{rd} Irish team}\\
+\fmtcompetition{ACM IrlCPC 2017}\hfill\nasc{http://mycode.doesnot.run/2017/04/03/irlcpc-2017/}{3\textsuperscript{rd} place}&
+\fmtcompetition{HashCode 2017 Qual.}\hfill\nasc{http://mycode.doesnot.run/2018/01/04/hashcode-2017/}{164\textsuperscript{th} place. 1\textsuperscript{st} Irish team}\\ %&Team of 2\\
 \fmtcompetition{ICPC NWERC 2016}\hfill 78\textsuperscript{th} place. 2\textsuperscript{nd} Irish team&
-\fmtcompetition{IrlCPC 2016}\hfill 2\textsuperscript{nd} place\\%&Team of 3\\
-\fmtcompetition{Google Hash Code 2016}\hfill 120\textsuperscript{th} place. 2\textsuperscript{nd} Irish team&
-\fmtcompetition{ICPC NWERC 2015}\hfill 74\textsuperscript{th} place. 1\textsuperscript{st} Irish team\\%&Team of 3\\
-\fmtcompetition{IOI 2015, Kazakhstan}\hfill \nasc{https://www.computing.dcu.ie/news/irelands-best-young-computer-programmers-win-trip-compete-olympics-programming}{Represented Ireland}&
+\fmtcompetition{ACM IrlCPC 2016}\hfill 2\textsuperscript{nd} place\\ %&Team of 3\\
+\fmtcompetition{HashCode 2016 Qual.}\hfill 120\textsuperscript{th} place. 2\textsuperscript{nd} Irish team&
+\fmtcompetition{ICPC NWERC 2015}\hfill 74\textsuperscript{th} place. 1\textsuperscript{st} Irish team\\ %&Team of 3\\
 \fmtcompetition{Google Call to Code 2014}\hfill 6\textsuperscript{th} place\\%&Solo
 \end{tabularx}
 \normalsize{}
-\section{Education}
-\fmtjobtitle{BSc. in Computational Problem Solving \& Software Development\hfill Dublin City University}\\
-\fmtdate{September 2015 -- June 2019}\hfill\fmtaddress{Dublin, Ireland}\\
-CPSSD is a degree aimed at students with prior CS experience. Read more at \nasc{https://cpssd.net}{the course site I created}.
-\bearna
-- 3rd year spent on placement at Google Zürich.\\
-- \fmtskill{88\% average grade} in 2\textsuperscript{nd} year (2\textsuperscript{nd} in class ranking). \fmtskill{Chairperson} of computing society.\\
-- \fmtskill{84\% average grade} in 1\textsuperscript{st} year (3\textsuperscript{rd} in class ranking). \fmtskill{Secretary} of computing society.
-\bearna
-Earned an \fmtskill{All-Ireland Scholarship} and a \fmtskill{DCU Academic Scholarship} as a result of obtaining 605 points (of 625 maximum; \fmtskill{top 1.2\%} nationally) in the Leaving Certificate in secondary school.
+
 \end{document}
